--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  
+  
+  <script src="https://www.paypal.com/sdk/js?client-id=AdLfQ47Z64fgnvwIdJRLOVH33vnaSCe4EI2J5PzUktXaYBQYPbsRMxdKUlMZWzopKzj9VNqoO_IMZLFZ&currency=USD"></script>
 </head>
 
 <body>
